--- a/src/App.css
+++ b/src/App.css
@@ -120,9 +120,25 @@ body {
   border-bottom-left-radius: 1em 0.5em;
 }
 
-.name-input {
-  justify-content: space-between;
-  position: relative;
-  float: right;
+.name-button{
+  margin-top: 30px;
 }
 
+.namepicker {
+  display: contents;
+  float: right;
+  justify-content: space-between;
+  font-size: 20px;
+}
+
+.title {
+  display: inline-flex;
+  float: left;
+  justify-content: space-between;
+  padding-right: 412px;
+}
+
+.username {
+  padding-top: 38px;
+  font-family: monospace;
+}
