--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,8 @@ body {
   position: relative;
   display: flex;
   margin-right: 20px;
+  padding-top: 9px;
+  margin-top: 15px;
 }
 .chat-message.me::after {
   content: "";
@@ -118,6 +120,14 @@ body {
   height: 1em;
   border-left: 0.5em solid #82D3FF;
   border-bottom-left-radius: 1em 0.5em;
+}
+
+.chat-name{
+  position: absolute;
+  color: orangered;
+  top: -13px;
+  font-size: 10px;
+  left: 11px;
 }
 
 .name-button{
