Added camera but not working

--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,11 @@ body {
 .username {
   padding-top: 38px;
 }
+
+.video {
+    position: absolute;
+    background: black;
+    object-fit: cover;
+    height: 200px;
+    width: 200px;
+}
