Added Emoji Picker

--- a/src/App.css
+++ b/src/App.css
@@ -182,10 +182,6 @@ body {
   padding-top: 38px;
 }
 
-.video {
-    position: absolute;
-    background: black;
-    object-fit: cover;
-    height: 200px;
-    width: 200px;
+.emoji-mart{
+  z-index: 10;
 }
