--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html, body, #root{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+html{
+  font-size: 10px;
+}
+
+/*tablets*/
+@media only screen and (min-width: 600px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+/*desktop*/
+@media only screen and (min-width: 768px) {
+  html{
+    font-size: 16px;
+  }
+}
